--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <slf4j.version>1.7.32</slf4j.version>
 
         <!-- Sling Dependencies Versions -->
-        <org.apache.sling.api.version>2.24.0</org.apache.sling.api.version>
+        <org.apache.sling.api.version>2.27.0</org.apache.sling.api.version>
         <org.apache.sling.jcr.api.version>2.4.0</org.apache.sling.jcr.api.version>
         <org.apache.sling.jcr.base.version>3.1.6</org.apache.sling.jcr.base.version>
         <org.apache.sling.commons.mime.version>2.2.2</org.apache.sling.commons.mime.version>
@@ -53,7 +53,7 @@
         <org.apache.sling.scripting.sightly.runtime.version>1.2.4-1.4.0</org.apache.sling.scripting.sightly.runtime.version>
         <org.apache.sling.servlet-helpers.version>1.4.2</org.apache.sling.servlet-helpers.version>
         <distribution.api.version>0.4.0</distribution.api.version>
-        <distribution.api.version.latest>0.3.1-SNAPSHOT</distribution.api.version.latest>
+        <distribution.api.version.latest>0.4.0</distribution.api.version.latest>
         <org.apache.sling.xss.version>2.2.8</org.apache.sling.xss.version>
 
         <!-- Third Party Dependencies Versions -->
@@ -317,6 +317,12 @@
                         <group>com.peregrine-cms</group>
                     </configuration>
                 </plugin>
+                <plugin>
+                  <groupId>org.apache.jackrabbit</groupId>
+                  <artifactId>filevault-package-maven-plugin</artifactId>
+                  <version>1.3.0</version>
+                </plugin>
+
                 <plugin>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>maven-sling-plugin</artifactId>
