Migrate content package projects from wcmio-content-package-maven-plugin to Jackrabbit filevault-package-maven-plugin
https://wcm-io.atlassian.net/wiki/spaces/WCMIO/pages/91586585/Migrate+content+package+projects+from+wcmio-content-package-maven-plugin+to+Jackrabbit+filevault-package-maven-plugin

https://wcm-io.atlassian.net/wiki/spaces/WCMIO/pages/1353056261/How+to+make+your+content+packages+comply+with+Jackrabbit+FileVault+Validation

--- a/pagerenderer/vue/ui.apps/pom.xml
+++ b/pagerenderer/vue/ui.apps/pom.xml
@@ -179,10 +179,11 @@
             </plugin>
 
             <plugin>
-                <groupId>io.wcm.maven.plugins</groupId>
-                <artifactId>wcmio-content-package-maven-plugin</artifactId>
+                <groupId> org.apache.jackrabbit</groupId>
+                <artifactId>filevault-package-maven-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
+                    <packageType>mixed</packageType>
                     <userId>${sling.user}</userId>
                     <password>${sling.password}</password>
                     <failOnMissingEmbed>true</failOnMissingEmbed>
