--- a/platform/base/ui.apps/pom.xml
+++ b/platform/base/ui.apps/pom.xml
@@ -97,16 +97,16 @@
 
         <plugins>
             <plugin>
-                <groupId>io.wcm.maven.plugins</groupId>
-                <artifactId>wcmio-content-package-maven-plugin</artifactId>
+                <groupId> org.apache.jackrabbit</groupId>
+                <artifactId>filevault-package-maven-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
+                    <packageType>mixed</packageType>
                     <!--<serviceURL>http://${sling.host}:${sling.port}/bin/cpm/package.service.html</serviceURL>-->
                     <userId>${sling.user}</userId>
                     <password>${sling.password}</password>
                     <failOnMissingEmbed>true</failOnMissingEmbed>
                     <group>com.peregrine-cms</group>
-                    <acHandling>MERGE_PRESERVE</acHandling>
                 </configuration>
                 <executions>
                     <execution>
