--- a/admin-base/sling.ui.apps/pom.xml
+++ b/admin-base/sling.ui.apps/pom.xml
@@ -83,6 +83,39 @@
 
         <plugins>
             <plugin>
+                <groupId> org.apache.jackrabbit</groupId>
+                <artifactId>filevault-package-maven-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <packageType>mixed</packageType>
+                    <!--<serviceURL>http://${sling.host}:${sling.port}/bin/cpm/package.service.html</serviceURL>-->
+                    <userId>${sling.user}</userId>
+                    <password>${sling.password}</password>
+                    <!--<useProxy>false</useProxy>-->
+                    <failOnMissingEmbed>true</failOnMissingEmbed>
+                    <!--<failOnError>true</failOnError>-->
+                    <group>com.peregrine-cms</group>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>package</goal>
+                        </goals>
+                        <configuration>
+                            <embeddedTarget>/apps/admin/install</embeddedTarget>
+                            <dependencies>
+                                <dependency>
+                                    <group>${project.groupId}</group>
+                                    <name>admin.sling.ui.apps</name>
+                                    <version>${project.version}</version>
+                                </dependency>
+                            </dependencies>
+                            <!-- ATTENTION: Do not include this package as sub package which would yield an endless loop -->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
                 <configuration>
