--- a/pagerenderer/server/ui.apps/pom.xml
+++ b/pagerenderer/server/ui.apps/pom.xml
@@ -145,10 +145,11 @@
 
 
             <plugin>
-                <groupId>io.wcm.maven.plugins</groupId>
-                <artifactId>wcmio-content-package-maven-plugin</artifactId>
+                <groupId> org.apache.jackrabbit</groupId>
+                <artifactId>filevault-package-maven-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
+                    <packageType>mixed</packageType>
                     <serviceURL>http://${sling.host}:${sling.port}/bin/cpm/package.service.html</serviceURL>
                     <userId>${sling.user}</userId>
                     <password>${sling.password}</password>
