--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <org.apache.sling.scripting.sightly.runtime.version>1.2.4-1.4.0</org.apache.sling.scripting.sightly.runtime.version>
         <org.apache.sling.servlet-helpers.version>1.4.2</org.apache.sling.servlet-helpers.version>
         <distribution.api.version>0.4.0</distribution.api.version>
-        <distribution.api.version.latest>0.3.1-SNAPSHOT</distribution.api.version.latest>
+        <distribution.api.version.latest>0.4.0</distribution.api.version.latest>
         <org.apache.sling.xss.version>2.2.8</org.apache.sling.xss.version>
 
         <!-- Third Party Dependencies Versions -->
@@ -307,9 +307,15 @@
                 </plugin>
                 <!-- Content Package Plugin -->
                 <plugin>
+                  <groupId>org.apache.jackrabbit</groupId>
+                  <artifactId>filevault-package-maven-plugin</artifactId>
+                  <version>1.3.2</version>
+                </plugin>
+                <!-- Upload and download content packages -->
+                <plugin>
                     <groupId>io.wcm.maven.plugins</groupId>
                     <artifactId>wcmio-content-package-maven-plugin</artifactId>
-                    <version>1.6.0</version>
+                    <version>2.1.6</version>
                     <configuration>
                         <userId>${sling.user}</userId>
                         <password>${sling.password}</password>
@@ -317,6 +323,7 @@
                         <group>com.peregrine-cms</group>
                     </configuration>
                 </plugin>
+
                 <plugin>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>maven-sling-plugin</artifactId>
