Migrate content package projects from wcmio-content-package-maven-plugin to Jackrabbit filevault-package-maven-plugin
https://wcm-io.atlassian.net/wiki/spaces/WCMIO/pages/91586585/Migrate+content+package+projects+from+wcmio-content-package-maven-plugin+to+Jackrabbit+filevault-package-maven-plugin

https://wcm-io.atlassian.net/wiki/spaces/WCMIO/pages/1353056261/How+to+make+your+content+packages+comply+with+Jackrabbit+FileVault+Validation

--- a/pom.xml
+++ b/pom.xml
@@ -318,6 +318,12 @@
                     </configuration>
                 </plugin>
                 <plugin>
+                  <groupId>org.apache.jackrabbit</groupId>
+                  <artifactId>filevault-package-maven-plugin</artifactId>
+                  <version>1.3.6</version>
+                </plugin>
+
+                <plugin>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>maven-sling-plugin</artifactId>
                     <version>${org.apache.sling.commons.testing.version}</version>
